[package]
name = "infst-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "infst"
path = "src/main.rs"

[dependencies]
infst = { path = "../infst", features = ["debug-tools"] }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossterm = "0.28"
serde_json = "1"
encoding_rs = "0.8"
