[package]
name = "infst"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
debug-tools = []
legacy-signatures = []
api = ["dep:ureq"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
encoding_rs.workspace = true
tracing.workspace = true
chrono.workspace = true
strum.workspace = true
owo-colors = "4"
memchr = "2"
ureq = { version = "3", optional = true, features = ["json"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[dev-dependencies]
tempfile.workspace = true
