[package]
name = "reflux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "reflux"
path = "src/main.rs"

[dependencies]
reflux-core = { path = "../reflux-core", features = ["debug-tools"] }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossterm = "0.28"
serde_json = "1"
encoding_rs = "0.8"
